fixed positioning on safari

--- a/src/components/emojiPicker.scss
+++ b/src/components/emojiPicker.scss
@@ -1,6 +1,8 @@
 .emojiPick{
     position: absolute;
     margin-top: -326px;
+    left: 0;
+    right: 0;
 
     display: flex;
     flex-direction: column;
@@ -64,6 +66,8 @@
 .emojiMenu-recent{
     display: flex;
     position: absolute;
+    left: 0;
+    right: 0;
     flex-direction: row;
     justify-content: left;
     background-color: #EBEEF2;
@@ -123,6 +127,8 @@
 
 .arrow{
     position: absolute;
+    left: 0;
+    right: 0;
     margin-bottom: 56px;
     margin-left: 290px;
     border-right: 16px solid #EBEEF2;
@@ -135,6 +141,8 @@
 
 .arrow2{
     position: absolute;
+    left: 0;
+    right: 0;
     margin-bottom: 57px;
     margin-left: 290px;
     border-right: 16px solid #EBEEF2;
